objects/Apttus_Approval_ApprovalRuleEntry__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Approval_ApprovalRuleId__c</fullName>
        <label>Approval Rule</label>
        <referenceTo>Apttus_Approval_ApprovalRule__c</referenceTo>
        <relationshipLabel>Approval Rule Entrys</relationshipLabel>
        <relationshipName>Approval_Rule_Entrys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval_AutoReapprovalCriteria__c</fullName>
        <label>Auto Reapproval Criteria</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval_ConditionFieldNames__c</fullName>
        <label>Condition Field Names</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval_Condition__c</fullName>
        <label>Condition</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval_DependsOn__c</fullName>
        <label>Depends On</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval_EntryLabel__c</fullName>
        <label>Entry Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Approval Rule Entry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Rule Entrys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>